--- a/Home.html
+++ b/Home.html
@@ -52,7 +52,7 @@
       <nav id="navbar" class="navbar order-last order-lg-0">
         <ul>
           <li><a class="active" href="landing.html">Inicio</a></li>
-          <li><a href="trainers.html">Tutores</a></li>
+          <li><a href="tutores.html">Tutores</a></li>
           <li><a href="events.html">Rutas guardadas</a></li>
           <li><a href="events.html">Mi menor</a></li>
 
@@ -547,6 +547,8 @@
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
+  <script src="assets/js/principal.js"></script>
+
 
 </body>
 
