--- a/rutasguardadas.html
+++ b/rutasguardadas.html
@@ -319,6 +319,7 @@
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
+  <script src="assets/js/principal.js"></script>
 
 </body>
 
