--- a/foros.html
+++ b/foros.html
@@ -444,7 +444,7 @@
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
   <script src="assets/js/principal.js"></script>
-
+  <script src="assets/js/inicio.js"></script>
 
 </body>
 
