--- a/landing.html
+++ b/landing.html
@@ -97,6 +97,7 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
+        <!-- return validacion() -->
         <form action="Home.html" onsubmit="return validacion()">
           <div class="mb-3">
             <label class="form-label">Tipo de documento</label>
@@ -121,7 +122,7 @@
           </div> -->
           <div id="centrar">
           <!-- <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button> -->
-          <button type="submit" class="btn btn-primary" id="enviarInicio">Ingresar</button>
+           <button type="submit" class="btn btn-primary" id="enviarInicio" onclick="location.href='javascript:inicio(user, pass)'">Ingresar</button> 
           <a class="btn btn-secondary" data-bs-toggle="modal" data-bs-target="#modalRegistro">Regístrate</a>
         </div>
         </form>
