Función registro y crearUsuario a medias, con cambio de modal gracias a JQuery UUUyyy

--- a/landing.html
+++ b/landing.html
@@ -98,7 +98,7 @@
       </div>
       <div class="modal-body">
         <!-- return validacion() -->
-        <form action="Home.html" onsubmit="return validacion()">
+        <form action="" onsubmit="return validacion()">
           <div class="mb-3">
             <label class="form-label">Tipo de documento</label>
             <select class="form-select" aria-label="Default select example" required>
@@ -172,7 +172,7 @@
       </div>
       <div class="modal-body">
 
-        <form action="landing.html#modal" onsubmit="return validacion()">
+        <form action="#exampleModal" onsubmit="return validacion()">
         <div class="mb-3">
           <label class="form-label">Nombres completos</label>
           <input id="nombre" type="text" class="form-control" maxlength="20" required>
@@ -598,9 +598,12 @@
   <script src="assets/vendor/php-email-form/validate.js"></script>
 
   <!-- Template Main JS File -->
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  
   <script src="assets/js/main.js"></script>
   <script src="assets/js/principal.js"></script>
   <script src="assets/js/inicio.js"></script>
+
 
 </body>
 
