--- a/rutasguardadas.html
+++ b/rutasguardadas.html
@@ -320,7 +320,7 @@
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
   <script src="assets/js/principal.js"></script>
-  <script src="assets/js/inicio.js"></script>
+  <script src="assets/js/inicios.js"></script>
 
 </body>
 
