--- a/landing.html
+++ b/landing.html
@@ -122,7 +122,7 @@
           </div>
           <div id="centrar">
           <!-- <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button> -->
-           <button type="submit" class="btn btn-primary" id="enviarInicio" onclick="location.href='javascript:inicio(user, pass)'">Ingresar</button> 
+           <button type="submit" class="btn btn-primary" id="enviarInicio" onclick="location.href='javascript:iniciarSesion(user, pass)'">Ingresar</button> 
           <a class="btn btn-secondary" data-bs-toggle="modal" data-bs-target="#modalRegistro">Regístrate</a>
         </div>
         </form>
