Problema de LocalStorage

--- a/Home.html
+++ b/Home.html
@@ -51,10 +51,10 @@
 
       <nav id="navbar" class="navbar order-last order-lg-0">
         <ul>
-          <li><a id="inicio" class="active" href="#">Inicio</a></li>
-          <li><a id="tutores" href="tutores.html">Tutores</a></li>
-          <li><a id="rutasGuardadas" href="rutasguardadas.html">Rutas guardadas</a></li>
-          <li><a id="miMenor"  href="events.html">Mi menor</a></li>
+          <li><a id="inicio" class="active inicio" href="#">Inicio</a></li>
+          <li><a id="tutores" class="tutores" href="tutores.html">Tutores</a></li>
+          <li><a id="rutasGuardadas" class="rutasGuardadas" href="rutasguardadas.html">Rutas guardadas</a></li>
+          <li><a id="miMenor" class="miMenor" href="events.html">Mi menor</a></li>
     
 
           <!--Menú desplegable de contactos -->
