--- a/Home.html
+++ b/Home.html
@@ -636,6 +636,8 @@
   <script src="assets/vendor/php-email-form/validate.js"></script>
 
   <!-- Template Main JS File -->
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
   <script src="assets/js/main.js"></script>
   <script src="assets/js/principal.js"></script>
   <script src="assets/js/inicios.js"></script>
