--- a/landing.html
+++ b/landing.html
@@ -117,7 +117,7 @@
             <input type="password" class="form-control" id="inicioContraseña"  maxlength="10" minlength="7" required>
           </div>
           <div class="mb-3 form-check">
-            <input type="checkbox" class="form-check-input" id="checkInicio" required>
+            <input type="checkbox" class="form-check-input" id="checkInicio">
             <label class="form-check-label" for="exampleCheck1" >Recordarme</label>
           </div>
           <div id="centrar">
