--- a/landing.html
+++ b/landing.html
@@ -223,7 +223,7 @@
         </div>
 
         <div class="mb-3 form-check">
-          <input id="tYC" type="checkbox" class="form-check-input" id="checkRegistro" required>
+          <input id="tYC" type="checkbox" class="form-check-input" required>
           <label class="form-check-label" for="exampleCheck1" >Acepto todos los términos y condiciones.</label>
         </div>
 
