--- a/tutores.html
+++ b/tutores.html
@@ -445,6 +445,8 @@
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  
   <script src="assets/js/principal.js"></script>
   <script src="assets/js/inicios.js"></script>
 
